--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     top: 80px;
 }
 svg {
-    background-color: #666;
+    background-color: #666; 
 }
 svg text {
     font-family: proxima-nova;
@@ -24,10 +24,10 @@ svg text {
     fill: #666;
 }
 .countries {
-    fill: #222;
+    fill: #FFF;
 }
 .airports {
-    fill: #666666;
+    fill: #000;
 }
 #status {
     position: fixed;
@@ -117,6 +117,11 @@ function execute(parameter) {
     countriesList = covidData.areas;
     airports = countriesList.filter(country => { return country.areas.length == 0 });
     covidData.areas.forEach(country => { airports = airports.concat(country.areas) });
+    // airports = countriesList;
+    
+    maxVal = Math.max(...airports.map( c => {return c[parameter] || 0}))
+    minVal = Math.min(...airports.map( c => {return c[parameter] || 0}))
+    console.log(maxVal, minVal);
 
     //airports = covidData.areas;
     airports.forEach(d => { d.coords = projection([d.long, d.lat]); })
@@ -138,9 +143,10 @@ function execute(parameter) {
     .selectAll('.airport')
         .data(airports)
     .enter().append('circle')
-        .attr('r', function(d) { return (showCityData ? 1 : 0); })
+        .attr('r', function(d) { return (showCityData ? (Math.floor((d[parameter]||1)*50/maxVal) || 1) : 0); })
             .attr('cx', function(d) { return d.coords && d.coords[0]; })
             .attr('cy', function(d) { return d.coords && d.coords[1]; })
+            .attr('opacity', 0.2)
 
     var heat = simpleheat(canvas);
 
